# ohtu-tehtavat

./: .gitignore
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: reset_counter.robot
