[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "shadowlegend551",email = "oskari.j.lappalainen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "poetry_web", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
